# Course3

./: .envSAMPLE  .gitignore  README.md  pyproject.toml
data/: .~lock.operations.xlsx#
src/: main.py  reports.py  service.py  utils.py  views.py
test/: test_reports.py  test_service.py  test_utils.py
